--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,12 @@ dotenv = "0.15"
 tracing = "0.1"
 anyhow = "1.0"
 actix-rt = "2.5"
-uuid = { version = "0.8", features = ["serde", "v4"] }
+uuid = { version = "1.11.0", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.9"
 log = "0.4"
+serde_json = "1.0"
+infer = "0.16"
 sqlx = { version = "0.8", features = [
     "runtime-tokio-rustls",
     "postgres",
