--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.59.0"
-image = "0.25.5"
+image = { version = "0.25.5", features = ["jpeg"]}
 serde = { version = "1.0", features = ["derive"] }
 dotenv = "0.15"
 tracing = "0.1"
@@ -20,6 +20,7 @@ env_logger = "0.9"
 log = "0.4"
 serde_json = "1.0"
 infer = "0.16"
+lazy_static = "1.4.0"
 sqlx = { version = "0.8", features = [
     "runtime-tokio-rustls",
     "postgres",
